--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Booking
 
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_ticket_book
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_ticket_booking
 spring.datasource.username=root
 spring.datasource.password=Vicky@welcome
 
